# contact-organizer-api

./: .env.exemple  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: __init__.py  auth.py  google_contacts.py  health.py
app/utils/: __init__.py  fetch_google_contacts.py  get_user_auth.py  oauth.py
