[project]
name = "contact-organizer-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "philipecerqueira", email = "philipe.cerq@gmail.com"},
]
dependencies = ["Flask>=3.1.0", "python-dotenv>=1.0.1", "authlib>=1.4.0", "requests>=2.32.3", "flask-cors>=5.0.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
